# nl-tester

./: .gitignore  AGENTS.md  README.md  install.ps1  install.sh
lumi-tester/: .gitignore  Cargo.toml  README.md
lumi-tester/.github/workflows/: release.yml
lumi-tester/docs/: README.md  TODO.md  ai-authoring.md  architecture.md  commands.md  desktop-testing.md  distribution.md  docs_update_snippet.md  flows.md  index.html  setup.md  writing_tests.md
lumi-tester/docs/api/: commands.md  drivers.md
lumi-tester/docs/flows/: test_execution_flow.md
lumi-tester/e2e/: README.md
lumi-tester/e2e/desktop/: macos-accessibility-smoke.yaml  macos-ax-selector-smoke.yaml  macos-calculator-smoke.yaml  macos-clearstate-smoke.yaml  macos-feature-smoke.yaml  macos-native-smoke.yaml  windows-clearstate-smoke.yaml  windows-native-smoke.yaml  windows-uia-selector-smoke.yaml
lumi-tester/e2e/routes/: google_maps_test.yaml  highway_speed_test.gpx  speed_alert_test.yaml
lumi-tester/e2e/web/: index.html  test.gpx  verify_advanced.yaml  verify_commands.yaml
lumi-tester/e2e/workspaces/: verify_commands.yaml
lumi-tester/resources/: ocr_helper  ocr_helper.swift  setup.ps1  setup.sh
lumi-tester/resources/apk/: nl-mirror-debug.apk
lumi-tester/schema/: lumi-test.schema.json
lumi-tester/scripts/: check-ai-reference.py  check-package-manifests.sh  generate-docs-index.py  generate-package-manifests.sh  install-ai.ps1  install-ai.sh  install.ps1  install.sh  publish-package-manager-manifests.sh  run-windows-desktop-smoke.ps1
lumi-tester/src/: ai.rs  lib.rs  main.rs
lumi-tester/tests/: test.yaml  verify_soft_assert.yaml
nexus-api/: README.md  (+3 more)
(+208 files in other folders)
