[package]
name = "lumi-tester"
version = "0.1.0"
edition = "2021"
description = "Multi-platform automation testing CLI"
repository = "https://github.com/Nghi-NV/nl-tester"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full", "process"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.10"
csv = "1.3"
chrono = "0.4"
glob = "0.3"
walkdir = "2.4"
dirs = "5.0"
which = "5.0"
uuid = { version = "1.0", features = ["v4"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"

# UI/Output
colored = "2.1"
indicatif = "0.17"

# Signal handling
ctrlc = "3.4"

# Image processing
image = { version = "0.24", features = ["gif"] }
imageproc = "0.23"

# XML parsing (for UI hierarchy)
quick-xml = "0.31"

# Async traits
async-trait = "0.1"

# Mock Data & Random
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Web Testing (Playwright)
playwright = "0.0.20"

# JavaScript Engine
boa_engine = "0.19"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres", "mysql", "sqlite"] }

# Web Server (Inspector UI)
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
base64 = "0.21"
libc = "0.2.180"
